<resources>
    <!-- Nombre del desarrollador -->
    <string name="developer_name" translatable="false">Daniel Zarzoso</string>

    <!-- Título de la aplicación -->
    <string name="app_name" translatable="false">Moovies</string>

    <!-- Slogan de la aplicación -->
    <string name="app_slogan">Consulta tus películas favoritas</string>

    <!-- Etiqueta de ayuda -->
    <string name="blank" translatable="false">-</string>

    <!-- C&P TMDb -->
    <string name="TMDb">Este producto utiliza el API TMDb pero no está respaldada ni certificada por TMDb.</string>

    <!-- Títulos de la Toolbar y del drawer -->
    <string name="inicio">Inicio</string>
    <string name="title_activity_ac_main" translatable="false">AcMain</string>
    <string name="populares">Populares</string>
    <string name="infantiles">Infantiles</string>
    <string name="upcoming">Próximamente</string>
    <string name="buscador">Buscador</string>
    <string name="detalle">Detalle</string>
    <string name="comunicacion">Otros</string>
    <string name="compartir">Compartir</string>
    <string name="contactar">Contactar</string>
    <string name="valorar">Valorar</string>
    <string name="about">Acerca de</string>
    <string name="action_settings">Ajustes</string>
    <string name="donar">Donar</string>
    <string name="share">Compartir</string>
    <string name="aleatoria">Aleatoria</string>

    <!-- Acciones del drawer -->
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>

    <!-- Etiquetas -->
    <string name="asunto">Asunto</string>
    <string name="email">Email de contacto</string>
    <string name="mensaje">Mensaje</string>
    <string name="title">Título</string>
    <string name="estreno">Estreno:</string>
    <string name="original_title">Título original</string>
    <string name="release_date">Fecha de salida</string>
    <string name="genre">Géneros</string>
    <string name="production">Productoras</string>
    <string name="nota">Valoración</string>
    <string name="nota_media">Nota media</string>
    <string name="overview">Sinopsis</string>
    <string name="trailer">Tráiler</string>
    <string name="buscar">Buscar</string>
    <string name="developed_by">Desarrollado por </string>
    <string name="share_message">Echa un vistazo a esta herramienta para consultar cualquier película.</string>
    <string name="donar_text">¿Te gusta esta aplicación? ¿Realmente es útil? ¡Invita al desarrollador a un café!</string>

    <!-- Opciones de los dialog -->
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="loading">Cargando</string>
    <string name="sending">Enviando</string>
    <string name="reintentar">Reintentar</string>

    <!-- Mensajes a los usuarios -->
    <string name="dialog_exit_message">¿Estás seguro de que quieres salir?</string>
    <string name="dialog_exit_dialog_message">¿Estás seguro de que quieres salir? Se perderá todo el progreso</string>
    <string name="dialog_enviar_message">¿Desea enviar este mensaje?</string>
    <string name="mensaje_enviado">Mensaje enviado</string>

    <!-- Errores -->
    <string name="e_mensaje_blanco">E: El mensaje no puede estar en blanco</string>
    <string name="e_asunto_blanco">E: El asunto no puede estar en blanco</string>
    <string name="e_email_blanco">E: El email no puede estar en blanco</string>
    <string name="e_email_formato">E: El email no tiene un formato correcto</string>
    <string name="e_obtener_datos">E: Error al obtener los datos</string>
    <string name="e_buscar">E: No se ha encontado ningún resultado</string>
    <string name="e_trad">E: Traducción no encontrada</string>

</resources>
