<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_populares"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/populares" />
        <item
            android:id="@+id/nav_infantiles"
            android:icon="@drawable/ic_child_friendly_black_24dp"
            android:title="@string/infantiles" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/upcoming" />
        <!--<item-->
            <!--android:id="@+id/nav_aleatoria"-->
            <!--android:icon="@drawable/ic_shuffle_black_24dp"-->
            <!--android:title="@string/aleatoria" />-->
        <item
            android:id="@+id/nav_buscador"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/buscador" />
    </group>

    <item android:title="@string/comunicacion">
        <menu>
            <item
                android:id="@+id/nav_donar"
                android:icon="@drawable/ic_favorite_border_black_24dp"
                android:title="@string/donar" />
            <item
                android:id="@+id/nav_compartir"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/compartir" />
            <item
                android:id="@+id/nav_contactar"
                android:icon="@drawable/ic_supervisor_account_black_24dp"
                android:title="@string/contactar" />
            <item
                android:id="@+id/nav_valorar"
                android:icon="@drawable/ic_grade_black_24dp"
                android:title="@string/valorar" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
