<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_asunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/input_asunto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/asunto"
                    android:maxLength="30"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_asunto"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_email"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/input_mensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mensaje"
                    android:maxLength="400"
                    android:ems="10"
                    android:inputType="textMultiLine"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                android:layout_below="@+id/input_layout_mensaje"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorPrimaryLight"
                />

            <Button
                android:id="@+id/btCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_mensaje"
                android:layout_margin="10dp"
                android:text="@string/cancelar"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorPrimaryLight"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>